--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
           dotnet-version: "9.0.x"
   
       - name: Run dotnet tests
-        run: |
-          dotnet test
+        run: dotnet test
+
   frontend-tests:
     runs-on: ubuntu-latest
     steps:
@@ -34,12 +34,8 @@ jobs:
           fetch-depth: 0
 
       # This enables task distribution via Nx Cloud
-      # Run this command as early as possible, before dependencies are installed
-      # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
-      # Uncomment this line to enable task distribution
       # - run: npx nx start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
 
-      # Cache node_modules
       - uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -47,11 +43,6 @@ jobs:
 
       - run: npm ci --legacy-peer-deps
       - run: npx playwright install --with-deps
-
-      # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
-      # - run: npx nx-cloud record -- echo Hello World
-      # When you enable task distribution, run the e2e-ci task instead of e2e
       - run: npx nx run-many -t lint build # test e2e
-      # Nx Cloud recommends fixes for failures to help you get CI green faster. Learn more: https://nx.dev/ci/features/self-healing-ci
       - run: npx nx fix-ci
         if: always()
